--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tanstack/react-table": "^8.0.0-alpha.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -12,15 +11,12 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
-    "chart.js": "^3.7.1",
     "formik": "^2.2.9",
-    "mdbreact": "^4.6.1",
     "react": "^17.0.2",
-    "react-charts": "^3.0.0-beta.36",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -52,7 +48,6 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
-    "@types/react-table": "^7.7.10",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23"
